--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,21 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Página principal</string>
+    <string name="menu_home">SafeHawk</string>
     <string name="menu_gallery">Configuración</string>
     <string name="menu_slideshow">Perfil de usuario</string>
+
+    <string name="registro">Registrarse</string>
+    <string name="inicio">Iniciar Sesión</string>
+    <string name="nombre">Ingresar nombre:</string>
+    <string name="clave">Ingresar clave: </string>
+    <string name="psw">Ingresar contraseña </string>
+    <string name="tomar_foto">Tomar foto</string>
+    <string name="guardar">Guardar</string>
+    <string name="limpiar">Limpiar</string>
+    <string name="contenido">Contenido:</string>
+    <string name="ingresarcont">Ingresar el texto...</string>
+    <string name="ingresarnombre">Ingresar el nombre ...</string>
 
     <string name="home_second">Home Second</string>
 </resources>
